--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,6 +13,11 @@
     --sm: 16px;
     --bg-encabezado: #312d2d;
     --color-encabezado: #ffffff;
+    --padding-left-content: 12px;
+    --padding-list-content: 28px;
+    --margin-bottom-content: 8px;
+    --padding-bottom-subtitle: 8px; 
+    --margin-subtitle: 24px 0px 12px 0px;
 }
 body{
     font-family: 'Quicksand', sans-serif;
@@ -41,12 +46,232 @@ body{
 .encabezado .encabezado-superior h1{
     font-size: var(--title-ppal);
     font-weight: bold;
+    margin-top: var(--margin-bottom-content);
 }
 .encabezado .encabezado-superior h2{
     font-size: var(--title-secun);
     font-weight: 300;
+    margin-top: calc(var(--margin-bottom-content) + 4px);
 }
 
 .encabezado .encabezado-inferior{
-    
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    height: 50px;
+    border-bottom: 1.5px solid black;
+}
+.encabezado .encabezado-inferior div{
+    display: flex;
+    align-items: center;
+}
+.encabezado .encabezado-inferior div a {
+    text-decoration: none;
+    color: var(--color-encabezado);
+    margin-left: 8px;
+    font-size: var(--sm);
+    font-weight: 300;
+}
+.encabezado .encabezado-inferior div p{
+    display: inline-block;
+    margin-left: 8px;
+    font-size: var(--sm);
+    font-weight: 300;
+}
+
+/* -----Main */
+main {
+    display: flex;
+    flex-direction: row;
+    padding: 8px 12px;
+    max-width: 1100px;
+    margin: 0 auto;
+}
+main .contenido-izquierda{
+    width: 50%;
+    margin-right: 24px;
+}
+main .contenido-izquierda div h2{
+    font-weight: var(--lg);
+    font-weight: bold;
+    margin: var(--margin-subtitle);
+    padding-bottom: var(--padding-bottom-subtitle);
+    border-bottom: 1px solid black;
+}
+main .contenido-izquierda .perfil p{
+    padding-left: 12px;
+    font-size: var(--md);
+}
+main .contenido-izquierda .skills ul{
+    padding-left: var(--padding-left-content);
+}
+main .contenido-izquierda .skills ul li{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: var(--margin-bottom-content);
+}
+main .contenido-izquierda .skills ul li h3{
+    font-size: var(--md);
+    font-weight: 400;
+}
+main .contenido-izquierda .skills ul li .contenedor-progress-bar{
+    width: 250px;
+    height: 16px;
+    border: 0.2px solid black;
+    border-radius: 12px;
+    overflow: hidden;
+}
+main .contenido-izquierda .skills ul li:nth-child(1) .contenedor-progress-bar .progress-bar{
+    width: 75%;
+    height: 100%;
+    background-color: rgb(147, 209, 65);
+    animation: progreso75 5s ease-in 30s 3;
+}
+main .contenido-izquierda .skills ul li:nth-child(2) .contenedor-progress-bar .progress-bar{
+    width: 75%;
+    height: 100%;
+    background-color: rgb(147, 209, 65);
+    animation: progreso75 5s ease-in 30s 3;
+}
+main .contenido-izquierda .skills ul li:nth-child(3) .contenedor-progress-bar .progress-bar{
+    width: 50%;
+    height: 100%;
+    background-color: rgb(212, 128, 59);
+    animation: progreso50 5s ease-in 30s 3;
+}
+main .contenido-izquierda .skills ul li:nth-child(4) .contenedor-progress-bar .progress-bar{
+    width: 75%;
+    height: 100%;
+    background-color: rgb(147, 209, 65);
+    animation: progreso75 5s ease-in 30s 3;
+}
+main .contenido-izquierda .skills ul li:nth-child(5) .contenedor-progress-bar .progress-bar{
+    width: 50%;
+    height: 100%;
+    background-color: rgb(212, 128, 59);
+    animation: progreso50 5s ease-in 30s 3;
+}
+main .contenido-izquierda .skills ul li:nth-child(6) .contenedor-progress-bar .progress-bar{
+    width: 75%;
+    height: 100%;
+    background-color: rgb(147, 209, 65);
+    animation: progreso75 5s ease-in 30s 3;
+}
+@keyframes progreso75{
+    0%{
+        width: 0%;
+        height: 100%;
+    }
+    25%{
+        width: 25%;
+        height: 100%;
+        background-color: rgb(212, 69, 69);
+    }
+    50%{
+        width: 50%;
+        height: 100%;
+        background-color: rgb(212, 128, 59);
+    }
+    75%{
+        width: 75%;
+        height: 100%;
+        background-color: rgb(147, 209, 65);
+    }
+}
+@keyframes progreso50{
+    0%{
+        width: 0%;
+        height: 100%;
+    }
+    25%{
+        width: 25%;
+        height: 100%;
+        background-color: rgb(212, 69, 69);
+    }
+    50%{
+        width: 50%;
+        height: 100%;
+        background-color: rgb(212, 128, 59);
+    }
+}
+main .contenido-izquierda .habilidades-blandas ul{
+    padding-left: var(--padding-list-content);
+}
+main .contenido-izquierda .habilidades-blandas ul li{
+    margin-bottom: var(--margin-bottom-content);
+    font-size: var(--md);
+}
+main .contenido-izquierda .hobbies ul{
+    margin-left: var(--padding-list-content);
+}
+main .contenido-izquierda .hobbies ul li{
+    margin-bottom: var(--margin-bottom-content);
+    font-size: var(--md);
+}
+
+main .contenido-derecha{
+    width: 50%;
+    margin-left: 24px;
+}
+main .contenido-derecha div h2{
+    font-weight: var(--lg);
+    font-weight: bold;
+    margin: var(--margin-subtitle);
+    padding-bottom: var(--padding-bottom-subtitle);
+    border-bottom: 1px solid black;
+}
+main .contenido-derecha .experiencia p{
+    font-size: var(--md);
+    padding-left: var(--padding-left-content);
+}
+main .contenido-derecha .proyectos ul{
+    padding-left: var(--padding-list-content);
+    padding-right: var(--padding-left-content);
+}
+main .contenido-derecha .proyectos ul li div{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: var(--margin-bottom-content);
+}
+main .contenido-derecha .proyectos ul li span:nth-child(1){
+    width: 200px;
+    font-size: var(--md);
+}
+main .contenido-derecha .proyectos ul li a {
+    color: black;
+    font-size: var(--sm);
+}
+main .contenido-derecha .educacion ul{
+    padding-left: var(--padding-left-content);
+    padding-right: var(--padding-left-content);
+}
+main .contenido-derecha .educacion ul li div{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: var(--margin-bottom-content);
+}
+main .contenido-derecha .educacion ul li span:nth-child(1){
+    width: 200px;
+    font-size: var(--md);
+}
+main .contenido-derecha .educacion ul li a {
+    color: black;
+    font-size: var(--sm);
+}
+main .contenido-derecha .links ul{
+    list-style: none;
+    padding-left: var(--padding-left-content);
+}
+main .contenido-derecha .links ul li{
+    margin-bottom: var(--margin-bottom-content);
+}
+main .contenido-derecha .links ul li a{
+    text-decoration: none;
+    font-size: var(--md);
+    color: black;
 }
